--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="keywords" content="Shivam gupta, web design, html5, css3">
+    <meta name="author" content="shivam gupta">
+    <link rel="stylesheet" href="css/style.css">
+    <title>web dev</title>
+  </head>
+  <body>
+     <header>
+       <div class="container">
+         <div id="branding">
+           <h1><span class='highlight'>Acme</span> Web Design</h1>
+         </div>
+         <nav>
+           <ul>
+             <li class="current"><a href="index.html">HOME</a></li>
+             <li><a href="about.html">ABOUT</a></li>
+             <li><a href="services.html">SERVICES</a></li>
+           </ul>
+         </nav>
+       </div>
+     </header>
+     <section id="showcase">
+       <div class="container">
+         <h1>Affordable Professional Web Design</h1>
+         <p>shit baby shit. Lorem ! WHat that means</br>Nulaa sit amet. consectur. Nalla baby Nalla</p>
+       </div>
+     </section>
+    <section id="newsletter">
+      <div class="container">
+        <h1>Subscribe To Our Newsletter</h1>
+        <form>
+          <input type="email" placeholder="ENter Email...">
+          <button type="submit" class="button_1">Subscribe</button>
+        </form>
+      </div>
+    </section>
+
+    <section id="boxes">
+      <div class="container">
+        <div class="box">
+          <img src="images/logo_html.png" width="150px">
+          <h3>HTML5 Markup</h3>
+          <p>Learn HTML and then HTML5</p>
+        </div>
+        <div class="box">
+          <img src="images/logo_css.png" width="150px">
+          <h3>CSS3</h3>
+          <p>Learn CSS, bootstrap and then CSS3</p>
+        </div>
+        <div class="box">
+          <img src="images/logo_brush.png" width="150px">
+          <h3>Responsive WEb design</h3>
+          <p>Learn javascript and then learn jqeury</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>Acne Web Desing, Copyright &copy; 2017
+      </p>
+    </footer>
+  </body>
+</html>
