--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <section id="showcase">
        <div class="container">
          <h1>Affordable Professional Web Design</h1>
-         <p>shit baby shit. Lorem ! WHat that means</br>Nulaa sit amet. consectur. Nalla baby Nalla</p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
        </div>
      </section>
     <section id="newsletter">
